Corrected overflow-x bar showing at 100%

--- a/a3/static/css/styles.css
+++ b/a3/static/css/styles.css
@@ -13,6 +13,7 @@ body {
 	display: flex;
 	min-height: 95vh;
 	flex-direction: column;
+	overflow: auto;
 }
 
 /* Force footer down with flex-direction column */
